# claude-cockpit

./: README.md  build.sh  cockpit.spec  install-remote.sh  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
Formula/: claude-cockpit.rb
cockpit/: __init__.py  app.py  app.tcss  data.py
commands/: cockpit-status.md
hooks/: check_enabled.py  hooks.json
tests/: test_data.py
